<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home">
        </item>
        <item android:id="@+id/nav_drawer1"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/composition">
        </item>
        <item android:id="@+id/nav_drawer2"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/pharmacies_near_by">
        </item>
        </group>


    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_Policy"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings">
        </item>
        </group>


</menu>