<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CD4ED"
    tools:context=".Error">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:contentDescription="@string/todo567"
        app:srcCompat="@drawable/se" />


    <androidx.cardview.widget.CardView
        android:id="@+id/error_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/space_20dp"
        app:cardBackgroundColor="@color/white_clr"
        app:cardCornerRadius="@dimen/space_20dp"
        app:cardElevation="@dimen/space_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_40dp"
            android:layout_marginTop="@dimen/space_40dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/error5"
            android:textAlignment="center"
            android:textColor="@color/black_clr"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/error_card"
        android:gravity="center|right"
        tools:ignore="RtlHardcoded">


        <Button
            android:id="@+id/Pharmacy"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="@dimen/font_20sp"
            android:text="@string/maps"
            tools:ignore="ButtonStyle,InvalidId,RtlSymmetry" />

        <Button
            android:id="@+id/errornext"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_40dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/next"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle"
            tools:text="Next" />
    </LinearLayout>


</RelativeLayout>