<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expectedissue">


    <TextView
        android:id="@+id/text_V"
        android:layout_width="277dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/expected_issues"
        android:textColor="@color/black_clr"
        android:textSize="@dimen/font_30sp"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.0" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="252dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="78dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Next" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="607dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="79dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>